# tailscale-svc-lb

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  index.yaml  pyproject.toml
.github/workflows/: docker.yaml  helm-lint.yaml  helm-release.yaml
chart/: Chart.yaml  service.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml
charts/tailscale-svc-lb/: Chart.yaml  values.yaml
charts/tailscale-svc-lb/templates/: deployment.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
runtime/: Dockerfile  run.sh  stop.sh
src/tailscale_svc_lb_controller/: config.py  helpers.py  main.py  tailscale_proxy.py  test_tailscale_operator.py
src/tailscale_svc_lb_controller/examples/: pod.yaml  service.yaml
src/tailscale_svc_lb_controller/resources/: base.py  daemonset.py  deployment.py  role.py  role_binding.py  secret.py  service_account.py
tailscale-proxy/: run.sh
